--- a/test-tem-task/local/data/my/others/rs1/exploredevops.html
+++ b/test-tem-task/local/data/my/others/rs1/exploredevops.html
@@ -3,7 +3,7 @@
 
 <!-- EMAIL BODY -->
 <div style="font-family: Arial, sans-serif; color: #333; line-height: 1.6; padding: 20px;">
-  <p>Hi,</p>
+  <p>Hello,</p>
 
   <p>I hope you're doing well. I wanted to inquire if your organization currently has any openings related to <strong>Cloud</strong> and <strong>DevOps</strong>. I’m passionate about these technologies and would love to learn more about any available roles.</p>
 
@@ -20,12 +20,13 @@
   <p>I would truly appreciate your guidance regarding any current or upcoming opportunities in the Cloud/DevOps space.</p>
 
   <p>
-    Thanks and Regards,<br>
-    <a href="https://www.linkedin.com/in/rajat55/" target="_blank" style="text-decoration: none; color: #000;"><strong>Rajat Sharma</strong></a><br>
+    <strong>Thanks and Regards,</strong>
+    <br>
+    <strong>Rajat Sharma</strong></a><br>
     Cloud/DevOps Engineer<br>
-    📍 Jhunjhunu, Rajasthan, India<br>
-    📧 <a href="mailto:linuxrajat007@gmail.com"><strong>linuxrajat007@gmail.com</strong></a><br>
-    📞 <strong>+91 8302629195</strong><br>
-    🔗 <a href="https://www.linkedin.com/in/rajat55/" target="_blank"><strong>LinkedIn</strong></a>
+    Jhunjhunu, Rajasthan, India<br>
+    <a href="mailto:linuxrajat007@gmail.com"><strong>linuxrajat007@gmail.com</strong></a><br>
+    <strong>+91 8302629195</strong><br>
+    <a href="https://www.linkedin.com/in/rajat55/" target="_blank"><strong>LinkedIn</strong></a>
   </p>
 </div>
