--- a/test-tem-task/local/data/my/others/rs1/sharingcv.html
+++ b/test-tem-task/local/data/my/others/rs1/sharingcv.html
@@ -18,12 +18,13 @@
   <p>Thank you for your time and consideration. I look forward to hearing from you.</p>
 
   <p>
-    Best regards,<br>
-    <strong>Rajat Sharma</strong><br>
+    <strong>Thanks and Regards,</strong>
+    <br>
+    <strong>Rajat Sharma</strong></a><br>
     Cloud/DevOps Engineer<br>
-    📍 Jhunjhunu, Rajasthan, India<br>
-    📧 <a href="mailto:linuxrajat007@gmail.com"><strong>linuxrajat007@gmail.com</strong></a><br>
-    📞 <strong>+91 8302629195</strong><br>
-    🔗 <a href="https://linkedin.com/in/rajat55" target="_blank"><strong>Linkedin</strong></a>
+    Jhunjhunu, Rajasthan, India<br>
+    <a href="mailto:linuxrajat007@gmail.com"><strong>linuxrajat007@gmail.com</strong></a><br>
+    <strong>+91 8302629195</strong><br>
+    <a href="https://www.linkedin.com/in/rajat55/" target="_blank"><strong>LinkedIn</strong></a>
   </p>
 </div>
