--- a/test-tem-task/local/data/my/others/rs1/sharingcv.html
+++ b/test-tem-task/local/data/my/others/rs1/sharingcv.html
@@ -5,14 +5,16 @@
 <div style="font-family: Arial, sans-serif; color: #333; line-height: 1.6; padding: 20px;">
   <p>Hello,</p>
 
-  <p>I am excited to share my CV for the <strong>DevOps Engineer</strong> position at <strong>[Company Name]</strong>. With over <strong>4 years of experience</strong> in <strong>Linux system administration</strong> and hands-on expertise in tools such as <strong>Docker, Kubernetes, AWS, Terraform, Ansible</strong>, and <strong>Prometheus/Grafana</strong>, I am confident in my ability to contribute effectively to your team.</p>
+  <p>I am excited to share my CV for the <strong>DevOps Engineer</strong> position. With over <strong>4 years of experience</strong> in <strong>Linux system administration</strong> and hands-on expertise in tools such as <strong>Docker, Kubernetes, AWS, Terraform, Ansible</strong>, and <strong>Prometheus/Grafana</strong>, I am confident in my ability to contribute effectively to your team.</p>
 
   <p>While I am continually growing in the DevOps domain, my background in <strong>system automation</strong> and <strong>infrastructure management</strong> enables me to bring immediate value.</p>
 
   <p>Please find my resume linked here: 
     <a href="https://drive.google.com/file/d/1faImWSjzkew5hs_XkWPKt_A2z3B70tp9/view?usp=sharing" target="_blank">
       <strong>View Resume</strong>
-    </a>. I am <strong>available to join immediately</strong> and would welcome the opportunity to discuss how my skills align with your team's needs.
+    </a>. 
+  </p>
+  <p>I am <strong>available to join immediately</strong> and would welcome the opportunity to discuss how my skills align with your team's needs.
   </p>
 
   <p>Thank you for your time and consideration. I look forward to hearing from you.</p>
