--- a/test-tem-task/local/data/my/tarun-explore-devops-role-template.html
+++ b/test-tem-task/local/data/my/tarun-explore-devops-role-template.html
@@ -35,7 +35,7 @@
   <p><strong>Location Preference:</strong> Open to Remote, Hybrid, or Relocation.</p>
 
   <p>You can view my resume here: 
-    <a href="https://drive.google.com/file/d/1YNqwY8RU_JSCDF8iRqf_i2A_oh3gcenB/view?usp=drive_link" target="_blank" style="color: #1a73e8;">View Resume</a>
+    <a href="https://drive.google.com/file/d/1a2ZXrA-pGqKDTs9oLePccJTGkA8cmFxd/view?usp=sharing" target="_blank" style="color: #1a73e8;">View Resume</a>
   </p>
 
   <p>
