--- a/test-tem-task/local/data/my/tarun-explore-devops-role-template.html
+++ b/test-tem-task/local/data/my/tarun-explore-devops-role-template.html
@@ -18,6 +18,7 @@
     <li><strong>Total Experience:</strong> 5+ years in DevOps and Cloud Technologies</li>
     <li><strong>Core Skills:</strong> Linux, Kubernetes, Docker, Terraform, AWS, GCP, Python, Shell Scripting, CI/CD, Helm Charts, Jenkins, Git</li>
     <li><strong>Current Availability:</strong> <span style="color:green;">Immediate Joiner</span></li>
+    <li><strong>Last Working Day:</strong> 2nd of May 2025</li>
     <li><strong>Last Organization:</strong> Compliance Innovation</li>
     <li><strong>Last Position Held:</strong> Senior Cloud Engineer</li>
   </ul>
@@ -35,7 +36,7 @@
   <p><strong>Location Preference:</strong> Open to Remote, Hybrid, or Relocation.</p>
 
   <p>You can view my resume here: 
-    <a href="https://drive.google.com/file/d/1a2ZXrA-pGqKDTs9oLePccJTGkA8cmFxd/view?usp=sharing" target="_blank" style="color: #1a73e8;">View Resume</a>
+    <a href="https://drive.google.com/file/d/1QWOXFZ-AXVB7d3VoDHQNnNIV61A5g6VV/view?usp=sharing" target="_blank" style="color: #1a73e8;">View Resume</a>
   </p>
 
   <p>
