--- a/test-tem-task/local/data/my/others/ss1/exploreF.html
+++ b/test-tem-task/local/data/my/others/ss1/exploreF.html
@@ -17,7 +17,7 @@
     </p>
 
     <p>
-      I have <strong>2+ years of experience</strong> working with
+      I have <strong>3 years of experience</strong> working with
       <strong>React.js, JavaScript, TypeScript, HTML, SCSS, Material UI, Tailwind CSS</strong>, and tools like
       <strong>Git, Jira, npm, and Webpack</strong>. I’ve also worked on
       <strong>microfrontend architecture, UI performance optimization</strong>, and have hands-on experience with
@@ -26,7 +26,7 @@
 
     <p>
       Here’s my resume for your reference:
-      <a href="https://drive.google.com/file/d/1iN5L4BeazxonXWqtVVNvP3q07K6LwmQG/view?usp=sharing" target="_blank" style="color: #1a73e8; text-decoration: none;">View Resume</a>
+      <a href="https://drive.google.com/file/d/1nXJPm-2Tcf8O08FTsqgFJkntUq0bfRtn/view?usp=sharing" target="_blank" style="color: #1a73e8; text-decoration: none;">View Resume</a>
     </p>
 
     <p>
