--- a/test-tem-task/local/data/my/others/sk/shareCV.html
+++ b/test-tem-task/local/data/my/others/sk/shareCV.html
@@ -46,8 +46,8 @@
   <p style="font-size: 15px;">
     <strong>Thanks and Regards,</strong><br>
     Sameer Khan<br>
-    <a href="mailto:khannsameer1211@gmail.com" style="color:#1a73e8;">tarunrj99@gmail.com</a><br>
-    +91 7073602751<br>
+    <a href="mailto:khannsameer1211@gmail.com" style="color:#1a73e8;">khannsameer1211@gmail.com</a><br>
+    +91 7440612682<br>
     <a href="https://www.linkedin.com/in/sameerkhan744/" target="_blank" style="color:#1a73e8;">LinkedIn Profile</a>
   </p>
 
