--- a/test-tem-task/local/data/my/others/rs1/exploredevops.html
+++ b/test-tem-task/local/data/my/others/rs1/exploredevops.html
@@ -1,5 +1,5 @@
 <!-- SUBJECT -->
-<!-- Exploring Cloud/DevOps Roles | Rajat Sharma -->
+<!-- Exploring Cloud/DevOps Roles | Immediate Joiner | Rajat Sharma -->
 
 <!-- EMAIL BODY -->
 <div style="font-family: Arial, sans-serif; color: #333; line-height: 1.6; padding: 20px;">
@@ -12,7 +12,7 @@
   <p>While I’m still growing in the DevOps field, my background in <strong>system management</strong> and <strong>automation</strong> makes me eager to add value in this role.</p>
 
   <p>Please feel free to view my resume here: 
-    <a href="https://drive.google.com/file/d/1faImWSjzkew5hs_XkWPKt_A2z3B70tp9/view?usp=sharing" target="_blank">
+    <a href="https://drive.google.com/file/d/1xU9jWZdwnh7Jxgr_S3J3tLFrRFK_NrnJ/view?usp=sharing" target="_blank">
       <strong>View Resume</strong>
     </a>.
   </p>
@@ -28,3 +28,4 @@
     <a href="https://www.linkedin.com/in/rajat55/" target="_blank"><strong>LinkedIn</strong></a>
   </p>
 </div>
+
