--- a/test-tem-task/local/data/my/others/sc1/shareCV.html
+++ b/test-tem-task/local/data/my/others/sc1/shareCV.html
@@ -22,7 +22,7 @@
 
     <p>
         I have attached my resume for your reference:
-      <a href="https://drive.google.com/file/d/1WD2tZL_DnifrNL4mHVUVTO8C4gPEoNy6/view" target="_blank" style="color: #1a73e8; text-decoration: none;">View Resume</a>
+      <a href="https://drive.google.com/file/d/1tMZFFGqmP2Zhya2zPDHnrXlglr0ztnN4/view?usp=sharing" target="_blank" style="color: #1a73e8; text-decoration: none;">View Resume</a>
     </p>
 
     <p>
@@ -42,3 +42,4 @@
       </p>
   </body>
 </html>
+
