--- a/test-tem-task/local/data/my/others/rs1/exploredevops.html
+++ b/test-tem-task/local/data/my/others/rs1/exploredevops.html
@@ -7,7 +7,7 @@
 
   <p>I hope you're doing well. I wanted to inquire if your organization currently has any openings related to <strong>Cloud</strong> and <strong>DevOps</strong>. I’m passionate about these technologies and would love to learn more about any available roles.</p>
 
-  <p>With over <strong>4 years of experience</strong> in <strong>Linux system administration</strong> and hands-on knowledge of tools like <strong>Docker, Kubernetes, Ansible</strong>, and <strong>Jenkins</strong>, I’m confident in my ability to contribute to your team.</p>
+  <p>With over <strong>4 years of experience</strong> in <strong>Linux system administration</strong> and hands-on knowledge of tools like <strong>Docker, Kubernetes, Github, AWS</strong>, and <strong>Jenkins</strong>, I’m confident in my ability to contribute to your team.</p>
 
   <p>While I’m still growing in the DevOps field, my background in <strong>system management</strong> and <strong>automation</strong> makes me eager to add value in this role.</p>
 
@@ -28,5 +28,6 @@
     <a href="https://www.linkedin.com/in/rajat55/" target="_blank"><strong>LinkedIn</strong></a>
   </p>
 </div>
+
 
 
