--- a/test-tem-task/local/data/my/others/rs1/sharingcv.html
+++ b/test-tem-task/local/data/my/others/rs1/sharingcv.html
@@ -5,7 +5,7 @@
 <div style="font-family: Arial, sans-serif; color: #333; line-height: 1.6; padding: 20px;">
   <p>Hello,</p>
 
-  <p>I am excited to share my CV for the <strong>DevOps Engineer</strong> position. With over <strong>4 years of experience</strong> in <strong>Linux system administration</strong> and hands-on expertise in tools such as <strong>Docker, Kubernetes, AWS, Terraform, Ansible</strong>, and <strong>Prometheus/Grafana</strong>, I am confident in my ability to contribute effectively to your team.</p>
+  <p>I am excited to share my CV for the <strong>DevOps Engineer</strong> position. With over <strong>4 years of experience</strong> in <strong>Linux system administration</strong> and hands-on expertise in tools such as <strong>Docker, Kubernetes, AWS, Terraform, Github</strong>, and <strong>Prometheus/Grafana</strong>, I am confident in my ability to contribute effectively to your team.</p>
 
   <p>While I am continually growing in the DevOps domain, my background in <strong>system automation</strong> and <strong>infrastructure management</strong> enables me to bring immediate value.</p>
 
@@ -28,5 +28,6 @@
     <a href="https://www.linkedin.com/in/rajat55/" target="_blank"><strong>LinkedIn</strong></a>
   </p>
 </div>
+
 
 
