Update email content for job exploration

--- a/test-tem-task/local/data/my/rk/explore_php.html
+++ b/test-tem-task/local/data/my/rk/explore_php.html
@@ -4,7 +4,7 @@
 <!-- EMAIL BODY -->
 <div style="font-family: Arial, sans-serif; color: #333; line-height: 1.6; font-size:15px;">
 
-  <p>Hi,</p>
+  <p>Hello,</p>
 
   <p>
     I hope you’re doing well. My name is <strong>Reetika Kukreja</strong>, and I’m a <strong>Senior Web Developer</strong> with over 
@@ -71,3 +71,4 @@
   </p>
 
 </div>
+
