Update email template for Python developer opportunities

--- a/test-tem-task/local/data/my/rk/explore_python.html
+++ b/test-tem-task/local/data/my/rk/explore_python.html
@@ -4,7 +4,7 @@
 <!-- EMAIL BODY -->
 <div style="font-family: Arial, sans-serif; color: #333; line-height: 1.6; font-size:15px;">
 
-  <p>Hi,</p>
+  <p>Hello,</p>
 
   <p>
     I hope you’re doing well. My name is <strong>Reetika Kukreja</strong>, and I’m a <strong>Python Developer</strong> with over 
@@ -70,4 +70,5 @@
   </p>
 
 </div>
+
 
