Update resume link in cvshare.html

--- a/test-tem-task/local/data/my/others/ss1/cvshare.html
+++ b/test-tem-task/local/data/my/others/ss1/cvshare.html
@@ -24,7 +24,7 @@
 
     <p>
       I have attached my resume for your reference:
-      <a href="https://drive.google.com/file/d/1nXJPm-2Tcf8O08FTsqgFJkntUq0bfRtn/view?usp=sharing" target="_blank" style="color: #1a73e8; text-decoration: none;">View Resume</a>
+      <a href="https://drive.google.com/file/d/1LomNf00FpgZoiWRCaS95znQ99Aq0JKbC/view?usp=drive_link" target="_blank" style="color: #1a73e8; text-decoration: none;">View Resume</a>
     </p>
 
     <p>
