--- a/test-tem-task/local/data/my/rk/explore_python.html
+++ b/test-tem-task/local/data/my/rk/explore_python.html
@@ -1,5 +1,5 @@
 <!-- SUBJECT -->
-<!-- Exploring Python Developer Opportunities | 3+ Yrs Experience | Reetika Kukreja -->
+<!-- Python Developer | 1–1.5 Yrs Python | Strong Backend Experience | Reetika Kukreja -->
 
 <!-- EMAIL BODY -->
 <div style="font-family: Arial, sans-serif; color: #333; line-height: 1.6; font-size:15px;">
@@ -7,55 +7,61 @@
   <p>Hello,</p>
 
   <p>
-    I hope you’re doing well. My name is <strong>Reetika Kukreja</strong>, and I’m a <strong>Python Developer</strong> with over 
-    <strong>3 years of professional experience</strong> in developing and maintaining backend applications using 
-    <strong>Python, Django, and Flask</strong>. I’m currently exploring new opportunities where I can apply my skills 
-    to build efficient, scalable, and data-driven solutions.
+    I hope you’re doing well. My name is <strong>Reetika Kukreja</strong>, and I’m a <strong>Backend Developer</strong> 
+    with <strong>6.5+ years of overall experience</strong>, currently transitioning into a full-time 
+    <strong>Python Developer role</strong>.
   </p>
 
   <p>
-    In my current role, I’ve worked on developing RESTful APIs, integrating third-party services, and automating backend processes 
-    that improved system efficiency and reduced manual workloads. I’ve also collaborated with cross-functional teams to deliver 
-    secure, reliable, and well-documented applications.
+    I have <strong>1–1.5 years of hands-on experience in Python</strong>, working with 
+    <strong>Django and Flask</strong> on backend modules, REST APIs, automation scripts, and data processing tasks.
+    Prior to this, I built a strong backend foundation using PHP frameworks, which has helped me adapt to Python quickly and effectively.
   </p>
 
-  <p>Here’s a quick overview of my background:</p>
+  <p>
+    In my current role, I’ve worked on developing RESTful APIs, integrating third-party services, and automating backend workflows 
+    using Python to improve system efficiency and reduce manual effort. I actively work with databases, ORM concepts, and API-driven architectures.
+  </p>
+
+  <p>Here’s a quick overview of my profile:</p>
 
   <ul style="margin-top:5px; margin-bottom:5px;">
-    <li><strong>Total Experience:</strong> 3+ years in Python and backend development</li>
+    <li><strong>Total Experience:</strong> 6.5+ years in backend development</li>
+    <li><strong>Python Experience:</strong> 1–1.5 years (Django, Flask, scripting, APIs)</li>
     <li><strong>Primary Skills:</strong> Python, Django, Flask, REST APIs, MySQL, PostgreSQL</li>
-    <li><strong>Additional Tools:</strong> Pandas, Git, Docker, Linux, JSON/XML handling</li>
+    <li><strong>Previous Backend Stack:</strong> PHP, CakePHP, Laravel, WordPress, Magento</li>
+    <li><strong>Additional Tools:</strong> Git, Docker (basic), Linux, Pandas, JSON/XML</li>
     <li><strong>Availability:</strong> <span style="color:green; font-weight:bold;">Immediate Joiner</span></li>
   </ul>
 
   <p>
-    My core technical strengths include <strong>Python scripting, API development, data processing, and database optimization</strong>. 
-    I also have experience integrating automation scripts into existing systems to streamline deployment and data workflows.
+    My strengths include <strong>Python scripting, backend API development, data handling, and database optimization</strong>. 
+    I’m comfortable working in production environments and collaborating with frontend, QA, and DevOps teams.
   </p>
 
-  <p>Some of my key achievements and areas of expertise include:</p>
+  <p>Key contributions include:</p>
 
   <ul style="margin-top:5px; margin-bottom:5px;">
-    <li>Developed RESTful APIs and backend modules using Django and Flask frameworks.</li>
-    <li>Automated data parsing and reporting processes with Python and Pandas.</li>
-    <li>Integrated external APIs and third-party services for payment, analytics, and CRM systems.</li>
-    <li>Optimized SQL queries and data models to improve database performance and scalability.</li>
-    <li>Implemented authentication, error handling, and logging for secure and stable applications.</li>
-    <li>Collaborated with frontend and QA teams to ensure seamless integration and deployment.</li>
+    <li>Developed and maintained RESTful APIs using Django and Flask.</li>
+    <li>Created Python scripts for automation, data parsing, and reporting.</li>
+    <li>Integrated third-party APIs for payments, CRM, and analytics systems.</li>
+    <li>Worked with ORM-based database models and optimized SQL queries.</li>
+    <li>Implemented authentication, logging, and error handling mechanisms.</li>
+    <li>Supported deployment and production bug fixes.</li>
   </ul>
 
   <p><strong>Location Preference:</strong> Open to Remote, Hybrid, or Relocation.</p>
   
   <p>
     You can view my resume here: 
-    <a href="https://drive.google.com/file/d/1tEMWVM4OE5blBHubY3EyZOeziFmK2azD/view?usp=sharing" 
+    <a href="https://drive.google.com/file/d/1A4DzyHK4uuyK9DaQ_3qJClP50ZPmw_ZU/view?usp=sharing" 
        target="_blank" 
        style="color:#1a73e8;">View Resume</a>
   </p>
 
   <p>
-    I’d be happy to discuss how my experience in Python development could add value to your team. 
-    Please let me know if there are any suitable openings or upcoming roles that align with my background.
+    I would welcome the opportunity to discuss how my backend experience and growing expertise in Python 
+    can contribute to your team.
   </p>
 
   <p>Looking forward to hearing from you.</p>
@@ -63,13 +69,16 @@
   <p>
     Best regards,<br>
     <strong>Reetika Kukreja</strong><br>
-    <a href="mailto:reetikakukreja12@gmail.com" style="color:#1a73e8; text-decoration:none;">reetikakukreja12@gmail.com</a><br>
+    <a href="mailto:reetikakukreja12@gmail.com" style="color:#1a73e8; text-decoration:none;">
+      reetikakukreja12@gmail.com
+    </a><br>
     +91 9694228896<br>
-    <a href="https://www.linkedin.com/in/reetika11" target="_blank" style="color:#1a73e8; text-decoration:none;">LinkedIn</a> |
-    <a href="https://github.com/Reetika-k" target="_blank" style="color:#1a73e8; text-decoration:none;">GitHub</a>
+    <a href="https://www.linkedin.com/in/reetika11" target="_blank" style="color:#1a73e8; text-decoration:none;">
+      LinkedIn
+    </a> |
+    <a href="https://github.com/Reetika-k" target="_blank" style="color:#1a73e8; text-decoration:none;">
+      GitHub
+    </a>
   </p>
 
 </div>
-
-
-
