Revise CV for Python Developer application
Updated CV submission for Python Developer role with new content reflecting 6.5 years of backend experience and 1-1.5 years in Python.

--- a/test-tem-task/local/data/my/rk/sharing_cv_python.html
+++ b/test-tem-task/local/data/my/rk/sharing_cv_python.html
@@ -7,47 +7,58 @@
   <p>Hello,</p>
 
   <p>
-    I hope you're doing well. I recently came across your post about the 
-    <strong style="color:#1a73e8;">Python Developer</strong> role, and I’m very interested in exploring this opportunity.
+    I hope you're doing well. I recently came across your post regarding the 
+    <strong style="color:#1a73e8;">Python Developer</strong> role, and I would like to explore this opportunity.
   </p>
 
   <p>
-    With over <strong style="color:#1a73e8;">3+ years of experience</strong> in <strong style="color:#1a73e8;">Python and Backend Development</strong>, 
-    I have hands-on expertise in <strong style="color:#1a73e8;">Django, Flask, RESTful APIs, Data Automation,</strong> and <strong style="color:#1a73e8;">Database Optimization</strong>. 
-    I’ve worked on multiple projects involving API integrations, automation scripts, and efficient backend systems.
+    I am a <strong style="color:#1a73e8;">Backend Developer</strong> with 
+    <strong style="color:#1a73e8;">6.5+ years of overall experience</strong>, currently transitioning into a 
+    full-time <strong style="color:#1a73e8;">Python Developer</strong> role.
+    I have <strong style="color:#1a73e8;">1–1.5 years of hands-on experience in Python</strong>, working with 
+    <strong style="color:#1a73e8;">Django, Flask, RESTful APIs, data automation,</strong> and 
+    <strong style="color:#1a73e8;">database-driven backend systems</strong>.
+  </p>
+
+  <p>
+    Along with my Python experience, I bring a strong backend foundation from working extensively with PHP-based frameworks,
+    which has helped me quickly adapt to Python ecosystems, architecture patterns, and production workflows.
   </p>
     
   <div style="margin-top: 30px;"></div>
   <h3 style="color: #1a73e8; margin-bottom: 10px;">Quick Profile Summary:</h3>
   <ul style="padding-left: 20px;">
-    <li><strong>Total Experience:</strong> 3+ years in Python and Backend Development</li>
-    <li><strong>Core Skills:</strong> Python, Django, Flask, REST APIs, MySQL, PostgreSQL, Pandas, JSON/XML, Git, Docker, Linux</li>
+    <li><strong>Total Experience:</strong> 6.5+ years in backend development</li>
+    <li><strong>Python Experience:</strong> 1–1.5 years (Django, Flask, APIs, scripting)</li>
+    <li><strong>Core Skills:</strong> Python, Django, Flask, REST APIs, MySQL, PostgreSQL, Pandas, JSON/XML, Git, Docker (basic), Linux</li>
     <li><strong>Current Availability:</strong> <span style="color:green;">Immediate Joiner</span></li>
     <li><strong>Last Organization:</strong> InnoHatch Company</li>
-    <li><strong>Last Position Held:</strong> Python Developer</li>
+    <li><strong>Last Role:</strong> Senior Web Developer (Python & Backend)</li>
   </ul>
 
   <div style="margin-top: 30px;"></div>
   <h3 style="color: #1a73e8; margin-bottom: 10px;">Key Expertise:</h3>
   <ul style="padding-left: 20px;">
-    <li>Developed RESTful APIs and backend modules using Django and Flask frameworks.</li>
-    <li>Automated data parsing, validation, and report generation using Python and Pandas.</li>
-    <li>Integrated external APIs and third-party services for analytics and payments.</li>
-    <li>Optimized SQL queries and backend logic to improve performance and scalability.</li>
-    <li>Implemented secure authentication, exception handling, and structured logging systems.</li>
+    <li>Developed RESTful APIs and backend modules using Django and Flask.</li>
+    <li>Created Python scripts for automation, data parsing, and reporting.</li>
+    <li>Integrated third-party APIs for analytics, CRM, and payment services.</li>
+    <li>Worked with ORM-based models and optimized SQL queries.</li>
+    <li>Implemented authentication, error handling, and logging mechanisms.</li>
+    <li>Supported deployments and production issue resolution.</li>
   </ul>
 
   <p><strong>Location Preference:</strong> Open to Remote, Hybrid, or Relocation.</p>
 
-  <p>You can view my resume here: 
-    <a href="https://drive.google.com/file/d/1tEMWVM4OE5blBHubY3EyZOeziFmK2azD/view?usp=sharing" 
+  <p>
+    You can view my resume here: 
+    <a href="https://drive.google.com/file/d/1A4DzyHK4uuyK9DaQ_3qJClP50ZPmw_ZU/view?usp=sharing" 
        target="_blank" 
        style="color: #1a73e8;">View Resume</a>
   </p>
      
   <p>
-    Please let me know if you need any additional information. 
-    I’d be happy to discuss how my experience in Python development aligns with your requirements.
+    Please let me know if you require any additional details. 
+    I would be glad to discuss how my backend experience and growing expertise in Python can support your team.
   </p>
 
   <hr style="border: none; border-top: 1px solid #ddd; margin: 30px 0;">
@@ -61,6 +72,4 @@
     <a href="https://github.com/Reetika-k" target="_blank" style="color:#1a73e8;">GitHub</a>
   </p>
 
-
 </div>
-
